examples/test/testpolicy4183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4183
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key47: value0
      key41: value3
      key33: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value28
          key3: value45
          key12: value3
      podSelector:
        matchLabels:
          key6: value48
          key11: value49
          key27: value18
